--- a/login.html
+++ b/login.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <!-- Link to the CSS file -->
-    <link rel="stylesheet" href="login.css">
-</head>
-<body>
-    <img src="./element/elementx.svg" alt="">
-
-</body>
+    <link rel="stylesheet" href="login.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="white-box">
+        <div class="header">
+          <img src="./element/suck 1.svg" alt="logo" />
+          <h2>Create an account</h2>
+          <p>Already have an account?</p>
+          <a href="">Log In</a>
+        </div>
+        <div class="api-link">
+          <div class="connect-account">
+            <div class="logo-ssn">
+              <img src="./element/canvas.svg" />
+              Connect to Canvas
+            </div>
+            <div class="separator">OR</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
