--- a/login.html
+++ b/login.html
@@ -25,11 +25,16 @@
         </div>
         <div class="api-link">
           <div class="connect-account">
-            <div class="logo-ssn">
+            <div class="click-button">
               <img src="./element/canvas.svg" />
               Connect to Canvas
             </div>
             <div class="separator">OR</div>
+            <p>Enter your institution email address to create an account.</p>
+            <p>Your email</p>
+            <input type="text" id="form" />
+            <br />
+            <div class="click-button">Create an account</div>
           </div>
         </div>
       </div>
