Co-authored-by: minhthww <minhthww@users.noreply.github.com> Co-authored-by: Thanh Nguyen <Thend911@users.noreply.github.com>

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="white-box">
         <div class="header">
-          <img src="./element/suck 1.svg" alt="logo" />
+          <img class="logo-big" src="./element/suck 1.svg" alt="logo" />
           <h2>Create an account</h2>
           <p>Already have an account?</p>
           <a href="">Log In</a>
