--- a/login.html
+++ b/login.html
@@ -18,18 +18,23 @@
     <div class="container">
       <div class="white-box">
         <div class="header">
-          <img src="./element/suck 1.svg" alt="logo" />
+          <img class="logo-big" src="./element/suck 1.svg" alt="logo" />
           <h2>Create an account</h2>
           <p>Already have an account?</p>
           <a href="">Log In</a>
         </div>
         <div class="api-link">
           <div class="connect-account">
-            <div class="logo-ssn">
+            <div class="click-button">
               <img src="./element/canvas.svg" />
               Connect to Canvas
             </div>
             <div class="separator">OR</div>
+            <p>Enter your institution email address to create an account.</p>
+            <p>Your email</p>
+            <input type="text" id="form" />
+            <br />
+            <div class="click-button">Create an account</div>
           </div>
         </div>
       </div>
